kubernetes/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
      - name: echo-service
        #image: electroma/ingress-demo-echosvc-amd64:0.1
        image: brndnmtthws/nginx-echo-headers
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 10m
            memory: 20Mi
          requests:
            cpu: 10m
            memory: 20Mi

---

apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: echo
