kubernetes/auth.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: auth
spec:
  ports:
  - port: 443
    targetPort: 443
  selector:
    app: auth

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: auth
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: auth
    spec:
      #nodeSelector:
      #
      containers:
        - name: auth
          imagePullPolicy: Always
          image: slaclab/apache-auth-oidc:latest
          ports:
            - containerPort: 443
          #livenessProbe:
          #  httpGet:
          #    path: /status
          #    port: 433 
          #  initialDelaySeconds: 10
          #  periodSeconds: 10
          #readinessProbe:
          #  httpGet:
          #    path: /status
          #    port: 433
          #  initialDelaySeconds: 30
          #  periodSeconds: 10
